# maia-sdr

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: maia-hdl.yml  maia-httpd.yml  maia-json.yml  maia-pac.yml  maia-wasm.yml  plutosdr-fw-pr-comment.yml  plutosdr-fw.yml  publish.yml  waterfall-example.yaml
maia-hdl/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  generate_maia_sdr_svd.py  pyproject.toml
maia-hdl/ip/maia-sdr/: Makefile  maia_sdr.xdc  package_ip.tcl
maia-hdl/maia_hdl/: axi.py  axi4_lite.py  buffer.py  cdc.py  clknx.py  cmult.py  config.py  configs.py  cpwr.py  ddc.py  dma.py  fft.py  fifo.py  fir.py  floating_point.py  maia_sdr.py  maia_sdr_version.py  mixer.py  mult2x.py  packer.py  pluto_platform.py  pulse.py  recorder.py  register.py  spectrometer.py  spectrum_integrator.py  util.py
maia-hdl/projects/pluto/: Makefile  system_bd.tcl  system_constr.xdc  system_project.tcl  system_top.v
maia-hdl/projects/pluto_iio/: Makefile  system_bd.tcl  system_project.tcl
maia-hdl/projects/plutoplus/: Makefile  system_bd.tcl  system_constr.xdc  system_project.tcl
maia-hdl/projects/plutoplus_iio/: Makefile  system_bd.tcl  system_project.tcl
maia-hdl/test/: amaranth_sim.py  common_edge.py  test_cmult.py  test_cpwr.py  test_fft.py  test_fir.py  test_floating_point.py  test_mixer.py  test_mult2x.py  test_packer.py  test_pulse.py  test_register.py  test_spectrum_integrator.py
maia-hdl/test_cocotb/: Makefile  axi.py  backpressure.py  memory.py
maia-hdl/test_cocotb/asyncfifo18_36/: Makefile  tb.v  test_asyncfifo18_36.py  verilog.py
maia-hdl/test_cocotb/axi4_lite/: Makefile  tb.v  test_axi4_lite.py  verilog.py
maia-hdl/test_cocotb/cmult3x/: Makefile  tb.v  test_cmult3x.py  verilog.py
maia-hdl/test_cocotb/cpwrpeak/: Makefile  tb.v  test_cpwrpeak.py  verilog.py
maia-hdl/test_cocotb/dma/: Makefile  tb.v  test_dma.py  verilog.py
maia-hdl/test_cocotb/dma_stream/: Makefile  tb.v  test_dma_stream.py  verilog.py
maia-hdl/test_cocotb/noise_input/: Makefile  tb.v  test_noise_input.py  verilog.py
maia-hdl/test_cocotb/recorder/: Makefile  tb.v  test_recorder.py  verilog.py
maia-httpd/: CHANGELOG.md  Cargo.toml  Cross.toml  README.md
maia-httpd/.cargo/: config.toml
maia-httpd/maia-json/: CHANGELOG.md  Cargo.toml  README.md
maia-httpd/maia-json/src/: lib.rs
maia-httpd/maia-pac/: Cargo.toml  README.md  justfile
maia-httpd/maia-pac/src/: lib.rs
maia-httpd/maia-pac/svd/: maia-sdr.svd
maia-httpd/src/: app.rs  args.rs  ddc.rs  fpga.rs  httpd.rs  iio.rs  lib.rs  main.rs  rxbuffer.rs  sigmf.rs  spectrometer.rs  uio.rs
maia-httpd/src/ddc/: constants.rs
maia-httpd/src/httpd/: ad9361.rs  api.rs  ddc.rs  geolocation.rs  iqengine.rs  recording.rs  spectrometer.rs  time.rs  version.rs  websocket.rs  zeros.rs
maia-httpd/src/httpd/recording/: iqengine.rs
maia-httpd/src/httpd/self_signed_cert/: Makefile  cert.pem  key.pem
maia-httpd/util/: spectrum_client.py
maia-kmod/: .gitignore  Makefile  maia-sdr.c
maia-wasm/: CHANGELOG.md  Cargo.toml  README.md
maia-wasm/assets/: index.html  index.js  manifest.json  style.css
maia-wasm/src/: array_view.rs  lib.rs  pointer.rs  render.rs  turbo_colormap.glsl  ui.rs  version.rs  waterfall.rs  waterfall_interaction.rs  websocket.rs
maia-wasm/src/colormap/: inferno.rs  mod.rs  turbo.rs  viridis.rs
maia-wasm/src/render/: engine.rs  uniform.rs
maia-wasm/src/render/engine/: text.rs  texture.rs  vao.rs
maia-wasm/src/ui/: active.rs  colormap.rs  input.rs  macros.rs  patch.rs  preferences.rs  request.rs
maia-wasm/waterfall-example/: Cargo.toml  README.md  index.html  index.js  style.css
maia-wasm/waterfall-example/src/: lib.rs  ui.rs
