[package]
name = "maia-httpd"
version = "0.3.2"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Maia SDR HTTP server"
license = "MIT OR Apache-2.0"
homepage = "https://maia-sdr.org/"
repository = "https://github.com/maia-sdr/maia-sdr/"
keywords = ["SDR", "FPGA", "Zynq"]
categories = ["hardware-support", "science", "web-programming::http-server", "web-programming::websocket"]

[features]
default = ["uclibc"]
uclibc = []

[dependencies]
anyhow = { version = "1.0", features = ["std"] } 
axum = { version = "0.7.4", features = ["default", "ws"] }
bytes = "1.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
http = "1.0"
hyper = "1.1"
libc = "0.2"
lz4_flex = { version = "0.11.2", features = ["frame"], default-features = true }
maia-json = { path = "maia-json", version = "0.3.0" }
maia-pac = { path = "maia-pac", version = "0.3.0"  }
mime_guess = "2"
nix = { version = "0.27", features = ["ioctl", "time"] }
page_size = "0.6"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
