[package]
name = "maia-httpd"
version = "0.5.3"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Maia SDR HTTP server"
license = "MIT OR Apache-2.0"
homepage = "https://maia-sdr.org/"
repository = "https://github.com/maia-sdr/maia-sdr/"
keywords = ["SDR", "FPGA", "Zynq"]
categories = ["hardware-support", "science", "web-programming::http-server", "web-programming::websocket"]

[features]
default = []
uclibc = []

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
# aws-lc-rs needs the bindgen feature to build for armv7-unknown-linux-gnueabihf
aws-lc-rs = { version = "1", features = ["bindgen"] }
axum = { version = "0.7.4", features = ["default", "ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bytes = "1.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
git-version = "0.3"
http = "1.0"
hyper = "1.1"
libc = "0.2"
lz4_flex = { version = "0.11.2", features = ["frame"], default-features = true }
maia-json = { path = "maia-json", version = "0.5.0" }
maia-pac = { path = "maia-pac", version = "0.5.0"  }
mime_guess = "2"
nix = { version = "0.29", features = ["ioctl", "time"] }
page_size = "0.6"
paste = "1.0"
pm-remez = { version = "0.1.2", features = ["openblas-static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
# https://github.com/rust-ndarray/ndarray-linalg/pull/354
lax = { git = "https://github.com/mike-kfed/ndarray-linalg.git", rev="cef6aa5e95d8d595e546fe82d09e83d1e1861f5a" }

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
