[package]
name = "maia-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Maia SDR WASM frontend"
license = "MIT OR Apache-2.0"
homepage = "https://maia-sdr.org/"
repository = "https://github.com/maia-sdr/maia-sdr/"
keywords = ["SDR", "FPGA", "wasm", "WebGL2"]
categories = ["science", "webassembly", "web-programming::http-client", "web-programming::websocket"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
maia-json = { path = "../maia-httpd/maia-json", version = "0.1.0" }
paste = "1.0"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'BinaryType',
  'CanvasRenderingContext2d',
  'CloseEvent',
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'Headers',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlDialogElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Location',
  'MessageEvent',
  'Performance',
  'PointerEvent',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Storage',
  'TextMetrics',
  'WebGlBuffer',
  'WebGlContextAttributes',
  'WebGlPowerPreference',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebSocket',
  'WheelEvent',
  'Window',
]

[profile.release]
lto = true
