[package]
name = "maia-json"
version = "0.5.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Maia SDR JSON API"
license = "MIT OR Apache-2.0"
homepage = "https://maia-sdr.org/"
repository = "https://github.com/maia-sdr/maia-sdr/"
keywords = ["SDR", "FPGA", "JSON"]
categories = ["science", "web-programming"]

[dependencies]
serde = { version= "1.0", features = ["derive"] }
