[package]
name = "waterfall-example"
version = "0.3.0"
edition = "2024"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Maia SDR waterfall example"
license = "MIT OR Apache-2.0"
homepage = "https://maia-sdr.org/"
repository = "https://github.com/maia-sdr/maia-sdr/"
keywords = ["SDR", "FPGA", "wasm", "WebGL2"]
categories = ["science", "webassembly", "web-programming::http-client"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jpeg-decoder = { version = "0.3", default-features = false }
js-sys = "0.3"
paste = "1"
maia-wasm = { path = ".." }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.72"
features = [
  'HtmlCanvasElement',
]

[profile.release]
codegen-units = 1
lto = true
